--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -23,16 +23,15 @@
                 android:id="@+id/image_book_cover"
                 android:layout_width="105dp"
                 android:layout_height="140dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/view_book_book_cover"
-                android:padding="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_margin="5dp"
                 />
 
             <TextView
                 android:id="@+id/text_book_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:layout_toEndOf="@+id/image_book_cover"
                 android:layout_toRightOf="@+id/image_book_cover"
                 android:text="title"
