--- a/app/src/main/res/layout/book_adapter.xml
+++ b/app/src/main/res/layout/book_adapter.xml
@@ -20,10 +20,11 @@
             android:id="@+id/text_view_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:text=""
-            />
+            android:layout_below="@+id/text_view_title"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:textSize="16sp"
+            android:text="sssss" />
 
         <TextView
             android:id="@+id/text_view_title"
@@ -31,13 +32,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:layout_toStartOf="@+id/text_view_year"
-            android:layout_toLeftOf="@+id/text_view_year"
+
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingBottom="10sp"
             android:text="Title"
-
             android:textSize="20sp" />
 
         <TextView
@@ -45,12 +44,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_view_title"
+            android:layout_toRightOf="@+id/text_view_year"
+            android:layout_toEndOf="@+id/text_view_year"
+            android:ellipsize="end"
             android:maxHeight="200dp"
-            android:text="Description"
-
-            android:textSize="16sp"
             android:maxLines="5"
-            android:ellipsize="end"/>
+            android:text="Description"
+            android:textSize="16sp"
+            android:layout_marginLeft="10dp"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
