--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.elvina.bookstats.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:name="com.elvina.bookstats.ui.finishedbooks.FinishedBooksFragment"
+        android:label="@string/title_finished"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.elvina.bookstats.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
+        android:name="com.elvina.bookstats.ui.statistics.StatisticsFragment"
+        android:label="@string/title_statistics"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
