--- a/app/src/main/res/layout/activity_view_book.xml
+++ b/app/src/main/res/layout/activity_view_book.xml
@@ -17,7 +17,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_margin="5dp">
 
             <ImageView
                 android:id="@+id/image_book_cover"
@@ -31,7 +32,7 @@
                 android:id="@+id/text_book_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="0dp"
                 android:layout_toEndOf="@+id/image_book_cover"
                 android:layout_toRightOf="@+id/image_book_cover"
                 android:text="title"
@@ -256,7 +257,6 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
     <Button
         android:id="@+id/button_add_current_page"
