--- a/app/src/main/res/layout/book_adapter.xml
+++ b/app/src/main/res/layout/book_adapter.xml
@@ -7,13 +7,12 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
-    app:cardCornerRadius="7sp"
-    >
+    app:cardCornerRadius="10sp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="12dp">
 
         <TextView
             android:id="@+id/text_view_year"
@@ -31,12 +30,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingBottom="10sp"
             android:text="Title"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textColor="@color/cardTextTitle"
+            />
 
         <TextView
             android:id="@+id/text_view_author"
